<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="firstStepFragment"
        type="com.sandboxygn.yangoncv.ui.FirstStepCreatingCvFragment" />
    <variable
        name="sharedViewModel"
        type="com.sandboxygn.yangoncv.model.CvViewModel" />
</data>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.FirstStepCreatingCvFragment"
            android:padding="22dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:text="@{sharedViewModel.name}"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:lineSpacingMultiplier="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="32dp"

                android:id="@+id/father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/parents_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_of_birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_father_name"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:lineSpacingMultiplier="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="32dp"

                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/date_of_birth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_date_of_birth"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:lineSpacingMultiplier="10" />
            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/father_name"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick="@{()->firstStepFragment.cancelCreatingCv()}"
                app:layout_constraintEnd_toStartOf="@+id/btn_next"
                app:layout_constraintStart_toStartOf="@+id/father_name"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <Button
                android:onClick="@{()->firstStepFragment.goToNextStep()}"
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="@+id/btn_cancel" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>